<?xml version="1.0"?>
<package format="3">
  <name>smart_gripper_control</name>
  <version>0.1.0</version>
  <description>ROS2 node for controlling ABB YuMi SmartGripper via RWS</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>abb_librws</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>